--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@tailwindcss/vite": "^4.1.3",
     "autoprefixer": "^10.4.21",
+    "axios": "^1.8.4",
     "lucide-react": "^0.487.0",
     "postcss": "^8.5.3",
     "react": "^19.0.0",
